data/derived/fa15/progs/unify/prog3457.ml.out
Characters 56-68:
  0 -> if(rand mod 2) then buildX() else buildY()
         ^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         bool
